--- a/src/IdentityServerDemo.BlazorClient/Pages/FetchData.razor
+++ b/src/IdentityServerDemo.BlazorClient/Pages/FetchData.razor
@@ -1,5 +1,8 @@
 @page "/fetchdata"
-@inject HttpClient Http
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@attribute [Authorize]
+@inject IHttpService Http
 
 <h1>Weather forecast</h1>
 
@@ -39,8 +42,21 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        try
+        {
+            forecasts = await (await Http.GetHttpClient()).GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
     }
+
+
+    //protected override async Task OnInitializedAsync()
+    //{
+    //    forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+    //}
 
     public class WeatherForecast
     {
