--- a/src/IdentityServerDemo.BlazorClient/_Imports.razor
+++ b/src/IdentityServerDemo.BlazorClient/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using IdentityServerDemo.BlazorClient
 @using IdentityServerDemo.BlazorClient.Shared
+@using IdentityServerDemo.BlazorClient.Helpers 
